# PassioGo

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml  testing.yml
passiogo/: __init__.py  _client.py  alert.py  route.py  stop.py  system.py  vehicle.py  ws.py
tests/: conftest.py  test_alerts.py  test_routes.py  test_stops.py  test_systems.py  test_vehicles.py
