[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PassioGo"
version = "0.3.0"
description = "An unofficial API for Passio Go"
readme = "README.md"
authors = [{name = "Andrei Thuler", email = "info@andreithuler.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.22.0",
    "websocket-client>=1.2.0",
]

[project.optional-dependencies]
docs = ["markdown>=3.3", "markdown-include>=0.6.0"]
dev  = ["pytest", "pytest-cov", "pre-commit", "ruff"]

[project.urls]
Documentation = "https://passiogo.readthedocs.io/"
GitHub        = "https://github.com/athuler/PassioGo"
Sponsor       = "https://github.com/sponsors/athuler"
Changelog     = "https://github.com/athuler/PassioGo/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "SIM"]

[tool.ruff.format]
# defaults: 4-space indent, double quotes
